[package]
name = "network-ttt"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "tic-tac-toe that works over a local network"
authors = ["NayaSapphire"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.2", features = ["termination"] }
local-ip-address = "0.4.8"
rand="0.8.5"
termion = "3.0.0"
